--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ footer {
   font-family: sans-serif;
 }
 
+/* background-images of drums */
 .w {
   background-image: url("images/tom1.png");
 }
@@ -43,22 +44,14 @@ footer {
   background-image: url("images/kick.png");
 }
 
+/* drum container div */
 .set {
   margin: 10% auto;
-}
-
-.game-over {
-  background-color: red;
-  opacity: 0.8;
 }
 
 .pressed {
   box-shadow: 0 3px 4px 0 #DBEDF3;
   opacity: 0.5;
-}
-
-.red {
-  color: red;
 }
 
 .drum {
